Modify Authentication with logic Mentor Nghia